Fixed HELLO WORLD.

--- a/Hello.html
+++ b/Hello.html
@@ -2,12 +2,12 @@
 <html>
 	<head>
 		<title>
-			Hello!!
+			Hello you beautiful human!!
 		</title>
 	</head>
 	<body>
 		<script>
-			console.log ("HELLO WORLD"
+			console.log ("HELLO WORLD");
 		</script>
 	</body>
 </html>
