There was a mistake on greetings.html. It has been fixed. Madlibs.html is not finished yet.

--- a/madlibs.html
+++ b/madlibs.html
@@ -7,8 +7,10 @@
   </head>
   <body>
     <script type="text/javascript">
-      var answer = prompt("What is your name?");
-      console.log("Hi " + answer);
+      var noun = "book"
+      var adjective = ""
+      var adverb = ""
+      var verb = ""
     </script>
   </body>
 </html>
