Finished madlibs html file.

--- a/madlibs.html
+++ b/madlibs.html
@@ -8,9 +8,10 @@
   <body>
     <script type="text/javascript">
       var noun = "book"
-      var adjective = ""
-      var adverb = ""
-      var verb = ""
+      var adjective = "gaint"
+      var verb = "run"
+      var adverb = "professionally"
+      console.log("A " + noun + " called Da Rules is really " + adjective + ". I have to " + verb + " across the other side " + adverb + " in less than two minutes.");
     </script>
   </body>
 </html>
